# bulk-update-tests

./: Comparison.ipynb  LICENSE  README.md  pyproject.toml  settings.py  urls.py  wsgi.py
apps/experiments/: models.py
apps/experiments/management/commands/: run_experiments.py
apps/experiments/migrations/: 0001_initial.py
apps/something/: factories.py  models.py  test_bulk_update.py
apps/something/management/commands/: generate_instances.py  run_test.py
apps/something/migrations/: 0001_initial.py  0002_auto_20200121_2040.py
pyinstrument/: inbuilt  package
