[tool.poetry]
name = "bulk-update-tests"
version = "0.1.0"
description = ""
authors = ["Mikulas Poul <mikulaspoul@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "~=2.2.9"
django-bulk-update = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
